# TakeOne

./: .gitignore  CMakeLists.txt  README.md
extra/: NextSteps.txt
include/: BoxRenderObject.h  CameraNode.h  DefaultRes.h  Engine.h  FileLoader.h  Input.h  LightNode.h  Log.h  Material.h  MaterialHelper.h  MaterialLoader.h  Mesh.h  Node.h  Primitives.h  Program.h  Raster.h  RenderNode.h  RenderObject.h  Shader.h  ShaderParam.h  ShaderParam.hpp  State.h  Texture.h  Transform.h
include/template_impl/: Material.hpp  ShaderParam.hpp
res/meshes/: 0_box.t1o  Teapot01.t1o  Teapot02.t1o  Teapot03.t1o  duck.t1o  duck_tex.t1o  triangle.t1o
res/models/Castle/: castle01.mtl
res/models/House01/: House01.mtl
res/objects/Castle/: defaultobject11.t1o  defaultobject12.t1o  defaultobject14.t1o  defaultobject8.t1o  g dx_dx_user_defined01.t1o  scene.txt
res/objects/ConceptHouse01/: g ConceptHouseExport01-COM-1914-1256075-Formica_Standard_Lam_180fx_3461_Black_Fossilstone_48x96.t1o  g ConceptHouseExport01-COM-Arch_Element_FaucetModern01-406600-00_TaME_MetalBrushedAluminum01.t1o  g ConceptHouseExport01-COM-Arch_Element_Fixtures_ShowerBar_byBrizo01-866629-Default_Material.t1o  g ConceptHouseExport01-COM-Arch_Element_Gate_Walkway01-1268401-00_TaME_MetalBrushedDark01.t1o  g ConceptHouseExport01-COM-Arch_Element_Handle_PocketDoor01_1-871644-00_TaME_Bronze02.t1o  g ConceptHouseExport01-COM-Arch_Element_Handle_PocketDoor01_1-871644-00_TaME_Bronze021.t1o  g ConceptHouseExport01-COM-Arch_Element_Handle_PocketDoor01_2-406632-00_TaME_Bronze023.t1o  g ConceptHouseExport01-COM-Arch_Element_Handle_PocketDoor01_2-406632-00_TaME_Bronze024.t1o  g ConceptHouseExport01-COM-Arch_Element_Hardware_DoorKnobInt01-810872-00_TaME_Bronze02.t1o  g ConceptHouseExport01-COM-Arch_Element_PocketDoor_30x80_1-871643-H1709_ST241.t1o  g ConceptHouseExport01-COM-Arch_Element_PocketDoor_30x80_2-406631-H1709_ST242.t1o  g ConceptHouseExport01-COM-Arch_Element_PocketDoor_30x80_2-406631-H1709_ST243.t1o  g ConceptHouseExport01-COM-Arch_Element_PocketDoor_30x80_2-406631-H1709_ST245.t1o  g ConceptHouseExport01-COM-Arch_Element_PocketDoor_30x80_2-406631-H1709_ST246.t1o  g ConceptHouseExport01-COM-AtriumDoorTrim01-828247-H1709_ST24.t1o  g ConceptHouseExport01-COM-AtriumDoorTrim01-828247-Stone_Texture01a.t1o  g ConceptHouseExport01-COM-AtriumDoorTrim01-828248-H1709_ST24.t1o  g ConceptHouseExport01-COM-AtriumDoorTrim01-828248-Stone_Texture01a.t1o  g ConceptHouseExport01-COM-BathroomShowerStall_Large01-855745-00_TaME_Bronze02.t1o  g ConceptHouseExport01-COM-BathroomShowerStall_Large01-855745-0136_Charcoal.t1o  g ConceptHouseExport01-COM-BathroomShowerStall_Large01-855745-SW_6253_Olympus_White.t1o  g ConceptHouseExport01-COM-BathroomShowerStall_Large01-855745-Translucent_Glass_Gray.t1o  g ConceptHouseExport01-COM-CH01_Foundation-1277362-Concrete_Aggregate_Small.t1o  g ConceptHouseExport01-COM-CH01_Foundation-1277362-Default_Material.t1o  g ConceptHouseExport01-COM-CH01_Foundation-1277362-Stone-2407b.t1o  g ConceptHouseExport01-COM-CH01_Foundation-1277362-Stone_Texture01a.t1o  g ConceptHouseExport01-COM-CH01_Foundation-1277362-Tile_OxFord_13a.t1o  g ConceptHouseExport01-COM-CH01_Foundation-1277362-Translucent_Glass_Gray.t1o  g ConceptHouseExport01-COM-CH01_Foundation-1277362-suc-paving-007.t1o  g ConceptHouseExport01-COM-CH01_Foundation-1277362-suc-paving-054a.t1o  g ConceptHouseExport01-COM-Component_2-1275209-H1555_ST15.t1o  g ConceptHouseExport01-COM-Component_40-1395630-0136_Charcoal.t1o  g ConceptHouseExport01-COM-Component_40-1395631-0136_Charcoal.t1o  g ConceptHouseExport01-COM-Component_40-1409130-Default_Material.t1o  g ConceptHouseExport01-COM-Component_40-1422630-0136_Charcoal.t1o  g ConceptHouseExport01-COM-Component_40-1436130-00_TaME_MetalBrushedDark01.t1o  g ConceptHouseExport01-COM-Component_40-1436131-00_TaME_MetalBrushedDark01.t1o  g ConceptHouseExport01-COM-Component_40-1449630-0136_Charcoal.t1o  g ConceptHouseExport01-COM-Component_40-1449631-Default_Material.t1o  g ConceptHouseExport01-COM-Component_40-37518-00_TaME_MetalBrushedDark01.t1o  (+316 more)
res/objects/FordMustang/: Cube.t1o  Group10.t1o  Group12.t1o  Group13.t1o  Group16.t1o  Group18.t1o  Group19.t1o  Group20.t1o  Group7.t1o  Group8.t1o  Mesh01.t1o  Mesh02.t1o  Mesh03.t1o  Mesh06.t1o  Mesh09.t1o  Mesh100.t1o  Mesh102.t1o  Mesh104.t1o  Mesh106.t1o  Mesh107.t1o  Mesh108.t1o  Mesh113.t1o  Mesh114.t1o  Mesh116.t1o  Mesh118.t1o  Mesh119.t1o  Mesh12.t1o  Mesh120.t1o  Mesh121.t1o  Mesh123.t1o  Mesh124.t1o  Mesh125.t1o  Mesh126.t1o  Mesh127.t1o  Mesh128.t1o  Mesh129.t1o  Mesh13.t1o  Mesh130.t1o  Mesh131.t1o  Mesh132.t1o  (+141 more)
res/objects/House01/: defaultobject.t1o  g House01-COM-Component_1-346067-SW_6253_Olympus_White.t1o  g House01-COM-Component_10-346069-00_TaME_Bronze02.t1o  g House01-COM-Component_11-346070-00_TaME_Bronze02.t1o  g House01-COM-Component_11-346070-H1424_ST22.t1o  g House01-COM-Component_12-346071-00_TaME_Bronze02.t1o  g House01-COM-Component_16-342042-00_TaME_Bronze02.t1o  g House01-COM-Component_17-342043-Metal_Corrogated_Shiny.t1o  g House01-COM-Component_2-342022-0135_DarkGray.t1o  g House01-COM-Component_2-342022-BlueRidge.t1o  g House01-COM-Component_3-324087-SW_6253_Olympus_White1.t1o  g House01-COM-Component_4-342041-00_TaME_Bronze02.t1o  g House01-COM-Component_5-342039-H1424_ST22.t1o  g House01-COM-Component_7-342025-H1424_ST22.t1o  (+80 more)
res/objects/Kitchen/: scene.txt
res/shaders/: fragment.glsl  vertex.glsl
samples/SpecularMap/: CMakeLists.txt
samples/States/: CMakeLists.txt
samples/common/: SampleUtil.cpp  SampleUtil.h
samples/test/: CMakeLists.txt
samples/test/src/: main.cpp
src/: BoxRenderObject.cpp  CameraNode.cpp  DefaultRes.cpp  Engine.cpp  FileLoader.cpp  Input.cpp  LightNode.cpp  Material.cpp  MaterialHelper.cpp  MaterialLoader.cpp  Mesh.cpp  Node.cpp  Primitives.cpp  Program.cpp  RenderNode.cpp  RenderObject.cpp  Shader.cpp  ShaderParam.cpp  Texture.cpp  Transform.cpp  main.cpp
tools/3dModelBaking/: test.py
tools/ObjConvert/: CMakeLists.txt
tools/ObjConvert/lib/assimp/lib/Linux/: libassimp.so.3
tools/ObjConvert/src/: main.cpp
(+2902 files in other folders)
